# WayPoints-Generator

./: .gitignore  CMakeLists.txt  package.xml  readme.md
config/: all_waypoints.rviz
launch/: polishingrobot_waypoint.launch  polishingrobot_waypoint_all_wall.launch  polishingrobot_waypoint_multi_thread.launch  polishingrobot_waypoint_multi_thread_all_wall.launch
src/: paintingpaths_planning.cpp  paintingpaths_planning_multi_thread.cpp  paintingpaths_planning_test.cpp  paintingpaths_visualization.cpp
xyz/: wall_3.xyz
